discussion/kv_engine/166923/166923_rev3_discussion.txt
======================================================================================================================
DESCRIPTION:

Merge commit '7131d278d' into couchbase/cheshire-cat

* commit '7131d278d':
  MB-47318: [BP] Push UpdateFlowControl through to PassiveStream
  MB-47318: [BP] Add disabled tests for the issue

Change-Id: I3379abb99cef866f9e772a8c9109ecc9f9949235

======================================================================================================================
COMMENTS
======================================================================================================================
Author: Jim Walker
Date: 2021-12-07 14:12:51.000000000
Message: 
Uploaded patch set 3.
----------------------------------------------------------------------------------------------------------------------
Author: Restriction Checker
Date: 2021-12-07 14:13:07.000000000
Message: 
Patch Set 3:

Branch restricted. PLEASE READ this URL: 

http://server.jenkins.couchbase.com/job/restricted-branch-check/276981/artifact/restricted.html : FAILURE
----------------------------------------------------------------------------------------------------------------------
Author: Build Bot
Date: 2021-12-07 14:38:54.000000000
Message: 
Patch Set 3: Verified-1 Code-Review-1

Build Failed 

http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-cheshire-cat/299/ : FAILURE

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_analyzer-cheshire-cat/kv_engine/tests/testapp/testapp_dcp_consumer.cc:51:33:
error: too many arguments to function call, expected 0, have 1
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-cheshire-cat/299/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-cheshire-cat/292/ : FAILURE

clang-tidy found the following problems:

<pre>
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-cheshire-cat/kv_engine/tests/testapp/testapp_dcp_consumer.cc:51:33: error: too many arguments to function call, expected 0, have 1 [clang-diagnostic-error]
                generate_config(0),
                                ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-cheshire-cat/kv_engine/tests/testapp/testapp.h:164:5: note: "generate_config" declared here
    static nlohmann::json generate_config();
    ^

</pre> ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-cheshire-cat/292/ )

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_tidy-cheshire-cat/kv_engine/tests/testapp/testapp_dcp_consumer.cc:51:33:
error: too many arguments to function call, expected 0, have 1 [clang-diagnostic-error]
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-cheshire-cat/292/ )

http://cv.jenkins.couchbase.com/job/kv_engine-windows-cheshire-cat/440/ : FAILURE

Compile error at ..\kv_engine\tests\testapp\testapp_dcp_consumer.cc(51): error C2660: "TestappTest::generate_config": function does not take 1 arguments ( http://cv.jenkins.couchbase.com/job/kv_engine-windows-cheshire-cat/440/ )

http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/cheshire-cat/306/ : FAILURE

Compile error at [2021-12-07T14:19:03.638Z] ../kv_engine/tests/testapp/testapp_dcp_consumer.cc:51:33:
error: too many arguments to function call, expected 0, have 1
 ( http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/cheshire-cat/306/ )

http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/cheshire-cat/304/ : FAILURE

Compile error at [2021-12-07T14:21:36.576Z] ../kv_engine/tests/testapp/testapp_dcp_consumer.cc:51:34:
error: no matching function for call to ?DcpConsumerBufferAckTest::generate_config(int)?
 ( http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/cheshire-cat/304/ )

http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/cheshire-cat/315/ : FAILURE

Compile error at [2021-12-07T14:27:39.997Z] ../kv_engine/tests/testapp/testapp_dcp_consumer.cc:51:33:
error: too many arguments to function call, expected 0, have 1
 ( http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/cheshire-cat/315/ )

http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/cheshire-cat/306/ : FAILURE

Compile error at [2021-12-07T14:23:48.821Z] ../kv_engine/tests/testapp/testapp_dcp_consumer.cc:51:33:
error: too many arguments to function call, expected 0, have 1
 ( http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/cheshire-cat/306/ )

http://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/cheshire-cat/220/ : FAILURE

Compile error at [2021-12-07T14:26:22.426Z] ../kv_engine/tests/testapp/testapp_dcp_consumer.cc:51:34:
error: no matching function for call to ?DcpConsumerBufferAckTest::generate_config(int)?
 ( http://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/cheshire-cat/220/ )

http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/cheshire-cat/299/ : FAILURE

Compile error at [2021-12-07T14:29:43.813Z] ../kv_engine/tests/testapp/testapp_dcp_consumer.cc:51:34:
error: no matching function for call to ?DcpConsumerBufferAckTest::generate_config(int)?
 ( http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/cheshire-cat/299/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/13219/ : SUCCESS
----------------------------------------------------------------------------------------------------------------------
